--- a/app/views/web/users/new.html.slim
+++ b/app/views/web/users/new.html.slim
@@ -7,8 +7,8 @@
           = f.input :email
           = f.input :password
           .form-group.mt-5
-            = f.submit class: 'btn btn-primary mb-2 btn-block'
+            = f.submit class: 'btn btn-primary mb-2 w-100'
 
       .card-footer.text-center.p-3.p-md-4
-        span.mr-1 = t('.have_account')
+        span.me-1 = t('.have_account')
         = link_to t('.sign_in'), new_session_path
