--- a/app/views/web/whiskies/index.html.slim
+++ b/app/views/web/whiskies/index.html.slim
@@ -1,2 +1,8 @@
+- if policy(Whisky).new?
+  .row.mb-2
+    .col-10
+    .col-2.d-flex.justify-content-end
+      = link_to t('.new'), new_whisky_path, class: 'btn btn-primary'
+
 .row
   = render @whiskies
