--- a/app/views/web/whisky_brands/_whisky_brand.html.slim
+++ b/app/views/web/whisky_brands/_whisky_brand.html.slim
@@ -1,11 +1,12 @@
-.col-sm-4
+.col-sm-5
   .card
     .card-body
       h5.card-title
         = whisky_brand.name
       p.card-text
         = whisky_brand.description
-      = link_to t('.show'), whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
-      = link_to t('.edit'), edit_whisky_brand_path(whisky_brand), class: 'btn btn-primary'
-      = link_to t('.delete'), whisky_brand_path(whisky_brand), method: :delete,
-          class: 'btn btn-primary', data: { confirm: t('.are_you_sure') }
+      .d-flex.justify-content-end
+        = link_to t('.show'), whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
+        = link_to t('.edit'), edit_whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
+        = link_to t('.delete'), whisky_brand_path(whisky_brand), method: :delete,
+            class: 'btn btn-danger', data: { confirm: t('.are_you_sure') }
