--- a/app/views/web/whisky_brands/index.html.slim
+++ b/app/views/web/whisky_brands/index.html.slim
@@ -5,4 +5,4 @@
       = link_to t('.new'), new_whisky_brand_path, class: 'btn btn-primary'
 
 .row
-  = render @whisky_brands
+  = render partial: "whisky_brand", collection: @whisky_brands
