--- a/app/views/web/whisky_brands/show.html.slim
+++ b/app/views/web/whisky_brands/show.html.slim
@@ -7,6 +7,6 @@
       = @whisky_brand.description
     p.fs-3
       = @whisky_brand.country
-    = link_to t('.edit'), edit_whisky_brand_path(@whisky_brand), class: 'btn btn-primary'
+    = link_to t('.edit'), edit_whisky_brand_path(@whisky_brand), class: 'btn btn-primary me-3'
     = link_to t('.delete'), whisky_brand_path(@whisky_brand), method: :delete,
-        class: 'btn btn-primary', data: { confirm: t('.are_you_sure') }
+        class: 'btn btn-danger', data: { confirm: t('.are_you_sure') }
