--- a/app/views/web/whiskies/show.html.slim
+++ b/app/views/web/whiskies/show.html.slim
@@ -5,4 +5,10 @@
   .col-6
     p.fs-3
       = @whisky.description
+
+.row.flex-column.align-items-center
+  .d-flex.col-6.justify-content-end
     = link_to t('.add_review'), '#', class: 'btn btn-primary'
+  .mt-2.col-6
+    = render partial: 'review', collection: @reviews
+
