--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html.h-100 lang="#{I18n.locale}"
   head
     meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
     title Code
+    = include_gon(init: true)
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_packs_with_chunks_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
