--- a/app/views/web/whiskies/show.html.slim
+++ b/app/views/web/whiskies/show.html.slim
@@ -7,9 +7,7 @@
       = @whisky.description
 
 .row.flex-column.align-items-center
-  #review-container
-  .d-flex.col-6.justify-content-end
-    = link_to t('.add_review'), '#', class: 'btn btn-primary'
+  #reviews-container
   .mt-2.col-6
     = render partial: 'review', collection: @reviews
 
