--- a/app/views/web/whiskies/show.html.slim
+++ b/app/views/web/whiskies/show.html.slim
@@ -8,8 +8,8 @@
 
 .row.flex-column.align-items-center
   #reviews-container
-  .mt-2.col-6
-    = render partial: 'review', collection: @reviews
+  / .mt-2.col-6
+  /   = render partial: 'review', collection: @reviews
 
 
 = javascript_pack_tag 'whisky', 'data-turbolinks-track': 'reload'
