--- a/app/views/web/whiskies/index.html.slim
+++ b/app/views/web/whiskies/index.html.slim
@@ -4,5 +4,5 @@
     .col-2.d-flex.justify-content-end
       = link_to t('.new'), new_whisky_path, class: 'btn btn-primary'
 
-.row
+.row.justify-content-center
   = render @whiskies
