--- a/app/views/web/whisky_brands/_form.html.slim
+++ b/app/views/web/whisky_brands/_form.html.slim
@@ -1,5 +1,5 @@
 = form.input :name
-= form.input :country
+= form.input :country, input_html: { class: 'form-select' }
 = form.input :description
 
 .form-group.mt-5
