--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,8 +16,13 @@ html.h-100 lang="#{I18n.locale}"
           span.navbar-toggler-icon
         #navbarNav.collapse.navbar-collapse
           ul.navbar-nav.flex-grow-1
-            = nav_menu_item 'Whiskies', whiskies_path
-            = nav_menu_item 'Brands', whisky_brands_path
+            = nav_menu_item t('.whiskies'), whiskies_path
+            = nav_menu_item t('.brands'), whisky_brands_path
+            - if policy(Whisky).new?
+              = nav_menu_item t('.create_whisky'), new_whisky_path
+            - if policy(Whisky::Brand).new?
+              = nav_menu_item t('.create_brand'), new_whisky_brand_path
+
             li.me-md-auto
             - if signed_in?
               = nav_menu_item current_user.email
