--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html.h-100 lang="#{I18n.locale}"
   head
     meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
-    title Code
+    title= t('.title') 
     = include_gon(init: true)
     = csrf_meta_tags
     = csp_meta_tag
@@ -11,8 +11,9 @@ html.h-100 lang="#{I18n.locale}"
   body.d-flex.flex-column.h-100
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container-fluid
-        a.navbar-brand href="#"  Flavour Whiskeys
-        button.navbar-toggler aria-controls="navbarNav" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button"
+        a.navbar-brand href="#"
+          = t('.title')
+        button.navbar-toggler data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button"
           span.navbar-toggler-icon
         #navbarNav.collapse.navbar-collapse
           ul.navbar-nav.flex-grow-1
@@ -26,10 +27,10 @@ html.h-100 lang="#{I18n.locale}"
             li.me-md-auto
             - if signed_in?
               = nav_menu_item current_user.email
-              = nav_menu_item 'Log out', session_path, method: :delete
+              = nav_menu_item t('.logout'), session_path, method: :delete
             - else
-              = nav_menu_item 'Sign in', new_session_path
-              = nav_menu_item 'Sign up', new_user_path
+              = nav_menu_item t('.sign_in'), new_session_path
+              = nav_menu_item t('.sign_up'), new_user_path
 
     - flash.each do |name, msg|
       - let 'error' => 'danger', 'warning' => 'warning', 'info' => 'info', 'success' => 'success', 'alert' => 'warning', 'recaptcha_error' => 'danger' do |mapping|
