--- a/app/views/web/whisky_brands/_whisky_brand.html.slim
+++ b/app/views/web/whisky_brands/_whisky_brand.html.slim
@@ -7,6 +7,8 @@
         = truncate(whisky_brand.description, length: 75)
       .d-flex.justify-content-end
         = link_to t('.show'), whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
-        = link_to t('.edit'), edit_whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
-        = link_to t('.delete'), whisky_brand_path(whisky_brand), method: :delete,
-            class: 'btn btn-danger', data: { confirm: t('.are_you_sure') }
+        - if policy(whisky_brand).edit?
+          = link_to t('.edit'), edit_whisky_brand_path(whisky_brand), class: 'btn btn-primary me-2'
+        - if policy(whisky_brand).destroy?
+          = link_to t('.delete'), whisky_brand_path(whisky_brand), method: :delete,
+              class: 'btn btn-danger', data: { confirm: t('.are_you_sure') }
